crates/swc_ecma_react_compiler/tests/fixtures/upstream/exhaustive-deps/error.invalid-missing-nonreactive-dep-unmemoized/error.txt
Found 1 error:

Error: Found missing memoization dependencies

Missing dependencies can cause a value to update less often than it should, resulting in stale UI.

error.invalid-missing-nonreactive-dep-unmemoized.ts:11:31
   9 |   useIdentity();
  10 |   object.x = 0;
> 11 |   const array = useMemo(() => [object], []);
     |                                ^^^^^^ Missing dependency `object`
  12 |   return array;
  13 | }
  14 |

Inferred dependencies: `[object]`
